# franca

./: .build.yml  .git-blame-ignore-revs  .gitignore  .gitmodules  Cargo.toml  LICENSE.md  Makefile  README.md  Untitled  a.fr  a.out  a.ssa  b.fr  b.ssa  bootstrap.sh  build.rs  compile.fr  compile.sh  devlog.md  dist.sh  index.html  libc_constants.c  notes.txt  out.txt  run_tests.fr  self.fr  t.s  temp.sh  test_opendir.c  todo.c  todo.md  todo2.c
backend/: README.md  abi.fr  arm64.fr  builder.fr  dump.fr  emit.fr  from_bc.fr  incremental.fr  ir.fr  lib.fr  llvm.fr  notes.md  util.fr
backend2/: README.md  arm64.fr  builder.fr  emit.fr  from_bc.fr  ir.fr  lib.fr  llvm.fr  main.fr
bench/: run_bench.fr
bindings/: dearimgui.fr  hello.c  qbe.fr  sokol.fr  tracy.fr  wuffs.fr
boot/: README.txt  franca-macos-arm64  loader.fr  strap.sh
compiler/: ast_boring.fr  ast_external.fr  build.fr  codemap.fr  comptime.fr  dispatch.fr  driver_api.fr  driver_io.fr  emit_bc.fr  emit_ir.fr  error_reporting.fr  ffi.fr  first.fr  incremental.fr  jit.fr  lex.fr  lib.fr  main.fr  other_main.fr  parse.fr  pool.fr  profile.fr  scope.fr  sema.fr  test.fr  values.fr  walk_ast.fr  worker.fr
crates/compiler/: Cargo.toml
crates/compiler/src/: ast.rs  bc.rs  bc_to_asm.rs  bootstrap_gen.rs  compiler.rs  crc.rs  emit_bc.rs  emit_rust.rs  export_ffi.rs  ffi.rs  interp.rs  lex.rs  lib.rs  logging.rs  overloading.rs  parse.rs  pool.rs  reflect.rs  scope.rs
crates/compiler/src/experiments/: bc_to_asm.rs  bootstrap_gen.rs  clang_ast.rs  crc.rs  emit_ir.rs  emit_rust.rs  macho.rs  mod.rs  s_ret.rs  tests.rs
crates/comptime_cranelift/: .gitignore  Cargo.toml
crates/comptime_cranelift/src/: bc.rs  ds.rs  lib.rs
docs/: README.md  adding_a_target.md  aggregates.md  annotations.md  aot_bake.md  backend.md  blink_fruit_platform.diff  bootstrapping.txt  builtins.md  caching.md  codegen.md  compilation.md  compiler_dependencies.txt  comptime.md  concessions.md  credits.md  debugging.md  freestanding.md  generics.md  glossary.md  graphics.md  higher_level.md  imports.md  introduction.md  lib_summary.md  macros.txt  reference.md  reference.txt  syntax.txt  (+2 more)
(+1222 files in other folders)
