[package]
name = "franca"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[workspace.dependencies]

[dependencies]
libc = { version = "0.2.153" }

[profile.dev.package."*"]
opt-level = 3


[features]
be_thread_safe = []
c-backend = []

[profile.release]
strip = "debuginfo"
panic = "abort"
# lto = true
# opt-level = "s"

[workspace]
members = [
    # TODO
    # "editors/lsp",
]
