[package]
name = "franca"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[workspace]

[workspace.dependencies]

[dependencies]
libc = { version = "0.2.153" }

[features]
be_thread_safe = []

[profile.release]
strip = "debuginfo"
panic = "abort"
# opt-level = "s"
# lto = true
