[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interp_derive = { path = "../interp_derive" }
codemap = { workspace = true }
codemap-diagnostic = { workspace = true }
libc = { workspace = true }
libffi = { workspace = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
memmap2 = "0.9.4"

[features]
# TODO: just having these as defaults in the main binary means tests dont get them 
default = ["some_log", "trace_errors"]
some_log = []
trace_errors = []
