[package]
name = "comptime_cranelift"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]

cranelift = { version = "0.107.2"}
cranelift-module = { version = "0.107.2"}
cranelift-jit = { version = "0.107.2"}
cranelift-native = { version = "0.107.2"}

[workspace]
